Almost finished all endpoints for groups